# HPC

./: README.md
lab01/: cal.py  run_teach_cluster.sh
lab01-4sp4-2024-group10-main/lab01-4sp4-2024-group10-main/: .gitignore  README.md  denseNN_driver.cpp  gemm_driver.cpp
lab01-4sp4-2024-group10-main/lab01-4sp4-2024-group10-main/include/: def.h  dense_nn.h  gemm.h  gemv.h
lab01-4sp4-2024-group10-main/lab01-4sp4-2024-group10-main/src/: dense_nn.cpp  gemm.cpp  gemv.cpp
lab01-4sp4-2024-group10-main/lab01-4sp4-2024-group10-main/test/: CMakeLists.txt  gemm_test.cpp  gemv_test.cpp
lab01/doc/: README.md
lab01/include/: utils.h
lab01/lab01-4sp4-2024-group10-main/: CMakeLists.txt  gemv_driver.cpp
lab01/lab01-4sp4-2024-group10-main/src/: utils.cpp
lab01/test/: denseNN_test.cpp
lab02/: CMakeLists.txt  run_teach_cluster.sh
lab02/lab2-4sp4-2024-group10-main/: README.md  sparseNN_driver.cpp  spmm_driver.cpp
lab02/lab2-4sp4-2024-group10-main/include/: def.h
lab02/lab2-4sp4-2024-group10-main/src/: spmm.cpp  utils.cpp
lab02/lab2-4sp4-2024-group10-main/test/: sparseNN_test.cpp  spmm_test.cpp
lab02/test/: CMakeLists.txt  spmv_test.cpp
lab03/: CMakeLists.txt  matmul_driver.cpp  run_teach_cluster.sh
lab03-4sp4-2024-group10-main/lab03-4sp4-2024-group10-main/: .gitignore  README.md  build.sh  integration_driver.cpp
lab03-4sp4-2024-group10-main/lab03-4sp4-2024-group10-main/include/: gemm.h  spmm.h
lab03-4sp4-2024-group10-main/lab03-4sp4-2024-group10-main/src/: spmm.cpp  utils.cpp
lab03-4sp4-2024-group10-main/lab03-4sp4-2024-group10-main/test/: mm_test.cpp  spmm_test.cpp
lab03/lab03-4sp4-2024-group10-main/include/: integration.h
lab03/lab03-4sp4-2024-group10-main/src/: gemm.cpp  integration.cpp
lab03/test/: CMakeLists.txt  integration_test.cpp
lab04/: CMakeLists.txt
lab04-4sp4-2024-group10-main/lab04-4sp4-2024-group10-main/: .gitignore
lab04-4sp4-2024-group10-main/lab04-4sp4-2024-group10-main/src/: gemm.cpp  gemmRow.cu
lab04-4sp4-2024-group10-main/lab04-4sp4-2024-group10-main/test/: mm_test.cpp
lab04/include/: gemm.h
lab04/lab04-4sp4-2024-group10-main/: matmul_driver.cpp
lab04/lab04-4sp4-2024-group10-main/test/: CMakeLists.txt
lab2-4sp4-2024-group10-main/lab2-4sp4-2024-group10-main/: .gitignore  spmv_driver.cpp
lab2-4sp4-2024-group10-main/lab2-4sp4-2024-group10-main/include/: gemm.h  gemv.h  sparse_nn.h  spmm.h  spmv.h
lab2-4sp4-2024-group10-main/lab2-4sp4-2024-group10-main/src/: gemm.cpp  gemv.cpp  sparse_nn.cpp  spmv.cpp
